--- a/src/app/dashboard/views/console/console.component.html
+++ b/src/app/dashboard/views/console/console.component.html
@@ -153,6 +153,7 @@
                                                         workspace.ref.id,
                                                         'releases'
                                                     ]"
+                                                    class="release-title"
                                                     >Active</a
                                                 >
                                             </li>
@@ -166,6 +167,7 @@
                                                 workspace.ref.id,
                                                 'tags'
                                             ]"
+                                            class="release-title"
                                         >
                                             <fa-icon
                                                 [icon]="releaseFolder"
