--- a/src/app/dashboard/views/add-action/add-action.component.scss
+++ b/src/app/dashboard/views/add-action/add-action.component.scss
@@ -5,3 +5,34 @@
     position: absolute;
     z-index: 1;
 }
+
+.card {
+    overflow-y: auto;
+    max-height: 80%;
+    .card-body {
+        overflow-y: auto;
+    }
+}
+
+.video-list {
+    width: 700px;
+    height: 300px;
+    overflow-y: auto;
+    .video {
+        width: 150px;
+        background-color: #ffffffd2;
+        cursor: pointer;
+        .video-thumbnail {
+            width: 100%;
+            height: 60px;
+            img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .video-title {
+            font-size: 0.8rem;
+        }
+    }
+}
